fixed screen distortion

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 html {
     scroll-behavior: smooth;
-    
+    overflow-x: hidden;
 }
 #particles-js {
     position: absolute; 
